update name and icon

--- a/src/top_bar.css
+++ b/src/top_bar.css
@@ -22,7 +22,7 @@
 .topnav a:hover {
     background-color: #ddd;
     color: black;
-    cursor: help;
+    cursor: pointer;
 }
 
 /* Add a color to the active/current link */
